--- a/src/style_sheets/education.css
+++ b/src/style_sheets/education.css
@@ -1,1 +1,22 @@
+.EduDiv{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: flex-start;
+    border-bottom: 1px solid black;
+}
 
+.SchBannHead{
+    width: 45vw;
+    height: auto;
+    border-radius: 12px;
+    /* border: 2.5px solid black;  */
+    padding: 10px;
+}
+
+.SchBannHead img{
+    width: 100%;
+    height: auto;
+    border-radius: 12px;
+    border: 2.5px solid black; 
+}
