--- a/src/style_sheets/style.css
+++ b/src/style_sheets/style.css
@@ -1,8 +1,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1;
   font-weight: 400;
-
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
@@ -13,6 +12,28 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+body {
+  margin: 0;
+  display: flex;
+  /* min-width: 320px;
+  min-height: 100vh; */
+}
+
+/* div{
+  border-color: black;
+  border-width: 20rem;
+} */
+
+h1 {
+  font-size: 2.5em;
+}
+
+p {
+  font-size: 1.4em;
+}
+
+
 /* a {
   font-weight: 500;
   color: #646cff;
@@ -20,17 +41,4 @@
 } */
 /* a:hover {
   color: #535bf2;
-} */
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 } */
