* Started Production of the work section * Priority will be placed on getting components on the screen * CSS will be prioritized after everything can be visualized * CSS will be applied if spacing is needed or if there is a specific place I want things in.

--- a/src/style_sheets/education.css
+++ b/src/style_sheets/education.css
@@ -10,7 +10,8 @@
     width: 45vw;
     height: auto;
     border-radius: 12px;
-    /* border: 2.5px solid black;  */
+    border: 2.5px solid black; 
+    margin-right: 48px;
     padding: 10px;
 }
 
