--- a/src/style_sheets/style.css
+++ b/src/style_sheets/style.css
@@ -14,31 +14,18 @@
 
 
 body {
-  margin: 0;
+  margin: 1;
   display: flex;
-  /* min-width: 320px;
-  min-height: 100vh; */
 }
 
-/* div{
-  border-color: black;
-  border-width: 20rem;
-} */
-
 h1 {
-  font-size: 2.5em;
+  font-size: 2.0em;
+}
+
+h2 {
+  font-size: 1.9em;
 }
 
 p {
-  font-size: 1.4em;
+  font-size: 1.2em;
 }
-
-
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-} */
-/* a:hover {
-  color: #535bf2;
-} */
