--- a/src/style_sheets/style.css
+++ b/src/style_sheets/style.css
@@ -1,3 +1,8 @@
+html, body, #root{
+  width: 100%;
+  margin: 0;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1;
@@ -14,18 +19,18 @@
 
 
 body {
-  margin: 1;
-  display: flex;
+  margin: 0;
+  width: 100%;
 }
 
-h1 {
+/* h1 {
   font-size: 2.0em;
-}
+} */
 
-h2 {
+/* h2 {
   font-size: 1.9em;
-}
+} */
 
-p {
+/* p {
   font-size: 1.2em;
-}
+} */
