--- a/src/style_sheets/card.css
+++ b/src/style_sheets/card.css
@@ -5,7 +5,7 @@
     padding: 20px;
     margin: 10px;
     text-align: center;
-    max-width: 250px;
+    max-width: 350px;
     display: inline-block;
 }
 
@@ -16,12 +16,11 @@
 }
 
 .card h2{
-    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     color: hsl(0, 0%, 20%);
 }
 
 .card p{
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     color: hsl(0, 0%, 30%);
 }
