Projects section is done moving onto the Education portion. Once Education is done focus on adding the relevant information regarding each section and finer css adjustments.

--- a/src/style_sheets/projects.css
+++ b/src/style_sheets/projects.css
@@ -5,3 +5,13 @@
     display: grid;
     align-items: center;
 }
+
+.projects-container{
+    border: 2px solid red;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    padding: 2rem;
+    justify-content: center;
+    gap: 2rem;
+}
