--- a/src/style_sheets/card.css
+++ b/src/style_sheets/card.css
@@ -9,6 +9,10 @@
     display: inline-block;
 }
 
+.card:hover{
+    transform: scale(1.05);
+}
+
 .card img{
     max-width: 60%;
     height: auto;
@@ -23,4 +27,20 @@
 .card p{
     /* font-family: Arial, Helvetica, sans-serif; */
     color: hsl(0, 0%, 30%);
+}
+
+.skill-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+    justify-self: center;
+    align-items: center;
+}
+
+.skill-list button{
+    /* box-shadow: 0 8px 8px 0 rgba(0,0,0,0.6); */
+    border-radius: 12px;
+    border-color: black;
+    border-width: 1.5px;
+    background-color: antiquewhite;
 }
