--- a/src/style_sheets/experience.css
+++ b/src/style_sheets/experience.css
@@ -15,13 +15,13 @@
     box-sizing: border-box;
     /* justify-content: center; */
     padding: 2rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .company-subinfo{
     width: 100%;
     justify-self: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .company-subinfo h2,h3{
@@ -31,7 +31,7 @@
 .description-duties{
     width: 80%;
     justify-self: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     box-sizing: border-box;
     padding: 2rem;
 }
