--- a/src/style_sheets/projects.css
+++ b/src/style_sheets/projects.css
@@ -7,7 +7,7 @@
 }
 
 .projects-container{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
