--- a/src/style_sheets/style.css
+++ b/src/style_sheets/style.css
@@ -3,6 +3,10 @@ html, body, #root{
   margin: 0;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1;
