--- a/src/style_sheets/experience.css
+++ b/src/style_sheets/experience.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-rows: auto 1fr;
     align-items: center;
+    background-color: #D8D174;
     /* border: 2px solid red; */
 }
 
